@@ -54,6 +54,8 @@ public:
 
 	virtual bool tryFire(const MSG& msg, LRESULT& retVal);
 	
+	const Rectangle& getClientSize() const { return clientSize; }
+	
 	void create( const Seed & cs = Seed() );
 
 protected:
