@@ -553,8 +553,6 @@ EXSTYLE WS_EX_STATICEDGE
 CAPTION "Tabs"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "Max tab rows",IDC_SETTINGS_MAX_TAB_ROWS,8,117,44,8
-    EDITTEXT        IDC_MAX_TAB_ROWS,56,115,41,14,ES_AUTOHSCROLL
     GROUPBOX        "Bold options",IDC_SETTINGS_BOLD_CONTENTS,5,8,263,98
     CONTROL         "",IDC_BOLD_BOOLEANS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,10,19,254,81
 END
