@@ -245,7 +245,7 @@ private:
 	void handleFollow();
 	void handleChatLButton();
 	
-	void updateFilter(const tstring& newText);
+	bool handleFilterKey(int c);
 	bool parseFilter(FilterModes& mode, int64_t& size);
 	bool matchFilter(const UserInfo& ui, int sel, bool doSizeCompare = false, FilterModes mode = NONE, int64_t size = 0);
 
