@@ -157,6 +157,7 @@ private:
 	void handleHashProgress();
 	void handleCloseWindows(unsigned id);
 	void handleSize();
+	void handleActivate(bool active);
 	LRESULT handleHelp(WPARAM wParam, LPARAM lParam);
 	LRESULT handleEndSession(WPARAM wParam, LPARAM lParam);
 	LRESULT handleTrayIcon(WPARAM wParam, LPARAM lParam);
