@@ -71,6 +71,12 @@ void SearchFrame::closeAll() {
 		(*i)->close(true);
 }
 
+static HRESULT allKeys(WPARAM wParam, LPARAM) {
+	if(wParam != VK_TAB)
+		return DLGC_WANTMESSAGE;
+	return 0;
+}
+
 SearchFrame::SearchFrame(SmartWin::WidgetTabView* mdiParent, const tstring& initialString_, LONGLONG initialSize_, SearchManager::SizeModes initialMode_, SearchManager::TypeModes initialType_) :
 	BaseType(mdiParent, TSTRING(SEARCH), SmartWin::IconPtr(new SmartWin::Icon(IDR_SEARCH))),
 	searchLabel(0),
@@ -126,8 +132,8 @@ SearchFrame::SearchFrame(SmartWin::WidgetTabView* mdiParent, const tstring& init
 		for(TStringIter i = lastSearches.begin(); i != lastSearches.end(); ++i) {
 			searchBox->insertValue(0, *i);
 		}
-		
-		searchBox->getTextBox()->onChar(std::tr1::bind(&SearchFrame::handleChar, this, _1));
+		searchBox->getTextBox()->onRaw(std::tr1::bind(&allKeys, _1, _2), SmartWin::Message(WM_GETDLGCODE));
+		searchBox->getTextBox()->onKeyDown(std::tr1::bind(&SearchFrame::handleSearchKeyDown, this, _1));
 	}
 
 	{
@@ -192,6 +198,7 @@ SearchFrame::SearchFrame(SmartWin::WidgetTabView* mdiParent, const tstring& init
 	{
 		WidgetListView::Seed cs = WinUtil::Seeds::listView;
 		cs.style |= LVS_NOCOLUMNHEADER;
+		cs.lvStyle |= LVS_EX_CHECKBOXES;
 		hubs = SmartWin::WidgetCreator<WidgetHubs>::create(this, cs);
 		addWidget(hubs);
 
@@ -1088,7 +1095,7 @@ void SearchFrame::runUserCommand(const UserCommand& uc) {
 	}
 }
 
-bool SearchFrame::handleChar(int c) {
+bool SearchFrame::handleSearchKeyDown(int c) {
 	if(c == VK_RETURN && !(WinUtil::isShift() || WinUtil::isCtrl() || WinUtil::isAlt())) {
 		runSearch();
 		return true;
